fix: oh god f. exvcr
fix: proper links for MIN EXIT PERIOD

fix: more logging

fix: more logging

fix: more logging

fix: pull deposit finality margin from api and wait THAT long

fix: formatting

fix: formatting

fix: expose more configuration

fix: expose more configuration

fix: expose more configuration
